# cassie_admin

./: .eslintignore  README.en.md  README.md  gulpfile.js  package-lock.json  package.json  vue.config.js
public/: index.html  splashscreen.html
public/element-theme/blue/: aui.css  index.css
public/element-theme/brown/: aui.css  index.css
public/element-theme/cyan/: aui.css  index.css
public/element-theme/default/: aui.css  index.css
public/element-theme/gray/: aui.css  index.css
public/element-theme/green/: aui.css  index.css
public/element-theme/indigo/: aui.css  index.css
public/element-theme/orange/: aui.css  index.css
public/element-theme/pink/: aui.css  index.css
public/element-theme/purple/: aui.css  index.css
public/element-theme/red/: aui.css  index.css
public/element-theme/turquoise/: aui.css
public/element-theme/yellow/: aui.css  index.css
src/: App.vue  main.js
src-tauri/: .rustfmt.toml  Cargo.toml  application.yml  build.rs  tauri.conf.json
src-tauri/src/: config.rs  event.rs  lib.rs  main.rs  utils.rs
src-tauri/src/db/: db.rs
src-tauri/src/initalize/: mod.rs
src-tauri/src/meuns/: menu.rs
src-tauri/src/plugin/: db.rs
src-tauri/src/server/: mod.rs
src-tauri/src/vo/: user.rs
src/assets/scss/: common.scss  variables.scss
src/components/ren-process-detail/: index.js
src/components/ren-process-running/: index.js
src/components/tinymce/: index.vue  loadTinymce.js
src/element-ui/: theme-variables.scss
src/element-ui/theme/: autocomplete.css  button.css  calendar.css  cascader-panel.css  cascader.css  checkbox.css  color-picker.css  date-picker.css  dropdown.css  index.css  input-number.css  (+15 more)
src/i18n/: en-US.js  zh-CN.js  zh-TW.js
src/mixins/: view-module.js
src/router/: index.js
src/store/: index.js
src/utils/: index.js  request.js
src/views/: main-content.vue  main-navbar.vue  main-sidebar-sub-menu.vue  main-sidebar.vue  main-theme-tools.vue  main.vue
(+116 files in other folders)
