[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["348040933@qq.com"]
license = ""
repository = ""
default-run = "app"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all", "system-tray"] }
rusqlite = { version = "0.27.0", features = ["bundled","modern_sqlite"] }
state = { version = "0.5", features = ["tls"] }
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
